--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <li>Email: tli2@andrew
       </ul>
 
-    <p><b>Lectures</b>: TuTh 3:00-4:20pm in GHC 4215</p>
+    <p><b>Lectures</b>: TuTh 3:00-4:20pm in SH 214</p>
     <p>
 
     <hr class="my-4">
