Updated location in syllabus

--- a/syllabus.html
+++ b/syllabus.html
@@ -54,7 +54,7 @@
           <li>Email: tli2@andrew
         </ul>
 
-      <p><b>Lectures</b>: TuTh 3:00-4:20pm in GHC 4215.</p>
+      <p><b>Lectures</b>: TuTh 3:00-4:20pm in SH 214.</p>
 
       <h4>Course textbook</h4>
       <p>
