--- a/schedule.html
+++ b/schedule.html
@@ -64,6 +64,171 @@
         <td></td>
         <td></td>
       </tr>
+      <tr><td>1/23 </td>
+        <td>Program semantics, proving safety</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>1/25 </td>
+        <td>Bounded model checking, symbolic execution</td>
+        <td></td>
+        <td></td>
+      </tr>            
+      <tr><td>1/30 </td>
+        <td>Runtime-enforceable policies</td>
+        <td></td>
+        <td></td>
+      </tr>            
+      <tr><td>2/1 </td>
+        <td>Execution monitoring</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>2/6 </td>
+        <td>Software fault isolation, control-flow integrity</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>2/8 </td>
+        <td>Typed assembly</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>2/13 </td>
+        <td>Proof-carrying code</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>2/15 </td>
+        <td>Information flow properties</td>
+        <td></td>
+        <td></td>
+      </tr>        
+      <tr><td>2/20 </td>
+        <td>Information flow types I</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>2/22 </td>
+        <td>Information flow types II</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>2/27 </td>
+        <td>Declassification policies</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr class="table-warning"><td>3/1 </td>
+        <td>Midterm review</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="table-danger">  <td>3/6 </td>
+        <td>Midterm exam</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>3/8 </td>
+        <td>Guest lecture: current research in security &amp privacy</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="table-success">  <td>3/13 </td>
+        <td>No class, spring break</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr class="table-success">  <td>3/15 </td>
+        <td>No class, spring break</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>3/20 </td>
+        <td>Decentralized information flow control</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>3/22 </td>
+        <td>Side channel vulnerabilities</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>3/27 </td>
+        <td>Side channel security</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>3/29 </td>
+        <td>Safety &amp information flow on the web</td>
+        <td></td>
+        <td></td>
+      </tr>  
+      <tr><td>4/3 </td>
+        <td>Web application defenses</td>
+        <td></td>
+        <td></td>
+      </tr>            
+      <tr><td>4/5 </td>
+        <td>Authorization logic</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>4/10 </td>
+        <td>PKI</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>4/12 </td>
+        <td>Trusted computing I</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>4/17 </td>
+        <td>Trusted computing II</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr class="table-success">  <td>4/19 </td>
+        <td>No class (happy Carnival!)</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>4/24 </td>
+        <td>Capability policies</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>4/26 </td>
+        <td>Introduction to data privacy</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>5/1 </td>
+        <td>Data sanitization &amp anonymization</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr><td>5/3 </td>
+        <td>Provable privacy</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>5/8 </td>
+        <td>Language techniques for privacy</td>
+        <td></td>
+        <td></td>
+      </tr>      
+      <tr class="table-warning"><td>5/10 </td>
+        <td>Final review</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr class="table-danger">  <td>5/14 </td>
+        <td>Start of finals week</td>
+        <td></td>
+        <td></td>
+      </tr>
     </tbody>
 
   </table></div><p><p>
