Updated office hours, added intro lecture

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
     <p><b>Instructor</b>: Matt Fredrikson</p>
       <ul>
-        <li>Office Hours: Mondays 11am (Fredrikson, CIC 2126)
+        <li>Office Hours: Mondays 11am CIC 2126
         <li>Email: mfredrik@cs
       </ul>
     <p><b>TA</b>:Tianyu Li</p>
       <ul>
-        <li>Office Hours: TBA
+        <li>Office Hours: Fridays 3pm Location TBA
         <li>Email: tli2@andrew
       </ul>
 
@@ -86,7 +86,7 @@
       <div class="list-group mx-auto">
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
-            <i>Welcome to 15-316! Make sure that you are enrolled in the Gradescope listing for this course.</i>
+            <i>Welcome! Make sure that you are enrolled in the Gradescope and Piazza sections for this course.</i>
             <small class="text-muted">1/16/18</small>
           </div>
         </div>
