--- a/syllabus.html
+++ b/syllabus.html
@@ -49,8 +49,7 @@
         </ul>
       <p><b>TAs</b>:Tianyu Li</p>
         <ul>
-          <li>Office Hours: TBD
-          <li>Location: TBD
+          <li>Office Hours: Fridays 3pm Location TBA
           <li>Email: tli2@andrew
         </ul>
 
