--- a/schedule.html
+++ b/schedule.html
@@ -56,7 +56,7 @@
     <tbody>
       <tr>  <td>1/16 </td>
         <td>Introduction</td>
-        <td></td>
+        <td><a href="lectures/01-intro/01-intro.pdf">[pdf]</a></td>
         <td></td>
       </tr>
       <tr><td>1/18 </td>
