--- a/schedule.html
+++ b/schedule.html
@@ -130,7 +130,7 @@
         <td></td>
       </tr>
       <tr><td>3/8 </td>
-        <td>Guest lecture: current research in security &amp privacy</td>
+        <td>Guest lecture: <a href="http://www.cs.cmu.edu/~jyang2/">Prof. Jean Yang</a> on <a href="http://www.cs.cmu.edu/~jyang2/papers/jeanyang_phd_thesis.pdf">policy</a>-<a href="http://www.cs.cmu.edu/~jyang2/papers/popl088-yang.pdf">agnostic</a> <a href="http://www.cs.cmu.edu/~jyang2/papers/p631-yang.pdf">programming</a></td>
         <td></td>
         <td></td>
       </tr>
