--- a/schedule.html
+++ b/schedule.html
@@ -38,7 +38,7 @@
 
 
   <br>
-  <p>Lecture notes will be posted after each class meeting.</p>
+  <p>Lecture notes will be posted shortly prior to each class meeting.</p>
   
   <br>
 
