--- a/schedule.html
+++ b/schedule.html
@@ -39,6 +39,7 @@
 
   <br>
   <p>Lecture notes will be posted shortly prior to each class meeting.</p>
+  <p>Note: to compile lecture notes, you will need to download the <a href="lectures/lecnotes-tex.zip">latex packages</a> and place the .sty files in the same directory as the lecture source.</p>
   
   <br>
 
@@ -61,7 +62,7 @@
       </tr>
       <tr><td>1/18 </td>
         <td>Propositional logic &amp; proofs</td>
-        <td></td>
+        <td><a href="lectures/02-prop.pdf">[pdf]</a><a href="lectures/02-prop.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>1/23 </td>
