--- a/schedule.html
+++ b/schedule.html
@@ -66,8 +66,8 @@
         <td></td>
       </tr>
       <tr><td>1/23 </td>
-        <td>Program semantics, proving safety</td>
-        <td></td>
+        <td>Program semantics, safety, &amp; dynamic logic</td>
+        <td><a href="lectures/03-safety.pdf">[pdf]</a><a href="lectures/03-safety.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>1/25 </td>
