--- a/schedule.html
+++ b/schedule.html
@@ -71,17 +71,17 @@
         <td></td>
       </tr>      
       <tr><td>1/25 </td>
-        <td>Bounded model checking, symbolic execution</td>
+        <td>Compositional reasoning about safety</td>
         <td></td>
         <td></td>
       </tr>            
       <tr><td>1/30 </td>
-        <td>Runtime-enforceable policies</td>
+        <td>Bounded model checking &amp; symbolic execution</td>
         <td></td>
         <td></td>
       </tr>            
       <tr><td>2/1 </td>
-        <td>Execution monitoring</td>
+        <td>Runtime safety enforcement</td>
         <td></td>
         <td></td>
       </tr>      
