--- a/schedule.html
+++ b/schedule.html
@@ -71,8 +71,8 @@
         <td></td>
       </tr>      
       <tr><td>1/25 </td>
-        <td>Compositional reasoning about safety</td>
-        <td></td>
+        <td>Proving safety, compositionally</td>
+        <td><a href="lectures/04-safetyproofs.pdf">[pdf]</a><a href="lectures/04-safetyproofs.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>1/30 </td>
@@ -201,32 +201,17 @@
         <td></td>
       </tr>      
       <tr><td>4/26 </td>
-        <td>Introduction to data privacy</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr><td>5/1 </td>
-        <td>Data sanitization &amp anonymization</td>
-        <td></td>
-        <td></td>
-      </tr>      
-      <tr><td>5/3 </td>
         <td>Provable privacy</td>
         <td></td>
         <td></td>
       </tr>
-      <tr><td>5/8 </td>
-        <td>Language techniques for privacy</td>
+      <tr><td>5/1 </td>
+        <td>Reasoning about privacy compositionally</td>
         <td></td>
         <td></td>
       </tr>      
-      <tr class="table-warning"><td>5/10 </td>
+      <tr class="table-warning"><td>5/3 </td>
         <td>Final review</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="table-danger">  <td>5/14 </td>
-        <td>Start of finals week</td>
         <td></td>
         <td></td>
       </tr>
