Added Tianyu's office hours location

--- a/syllabus.html
+++ b/syllabus.html
@@ -49,7 +49,7 @@
         </ul>
       <p><b>TAs</b>:Tianyu Li</p>
         <ul>
-          <li>Office Hours: Fridays 3pm Location TBA
+          <li>Office Hours: Fridays 3pm Location 2206
           <li>Email: tli2@andrew
         </ul>
 
