--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </ul>
     <p><b>TA</b>:Tianyu Li</p>
       <ul>
-        <li>Office Hours: Fridays 3pm Location TBA
+        <li>Office Hours: Fridays 3pm Location CIC 2206
         <li>Email: tli2@andrew
       </ul>
 
