--- a/assignments.html
+++ b/assignments.html
@@ -51,13 +51,29 @@
       <p><b>Relevant Links</b>
         <ul>
           <li><a href="https://gradescope.com/courses/14456">Gradescope</a>
-          <li><a href="#">Autolab (coming soon)</a>
         </ul>
       </p>
 
-      <p>
-        <i>Check back soon for handouts and template code as assignments are given</i>
-      </p>
+      <div class="table-responsive">
+      <table class="table">
+        <thead class="thead-default">
+          <tr>
+            <th><i>assignment</i></th>
+            <th><i>due date</i></th>
+            <th><i>handout</i></th>
+            <th><i>template</i></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1: Prop it out</td>
+            <td>2/1</td>
+            <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
+            <td><a href="homework/01-logicsafety-template.zip">[zip]</a></td>
+          </tr>                                   
+        </tbody>
+      </table></div><p><p>
+      <br>
 
     </div>
 
