--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
       <div class="list-group mx-auto">
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
+            <i>Assignment 1 is now available, due at midnight on 2/1/18.</i>
+            <small class="text-muted">1/25/18</small>
+          </div>          
+          <div class="d-flex w-100 justify-content-between">
             <i>Welcome! Make sure that you are enrolled in the Gradescope and Piazza sections for this course.</i>
             <small class="text-muted">1/16/18</small>
           </div>
