Fixed typos on website

--- a/assignments.html
+++ b/assignments.html
@@ -44,9 +44,6 @@
       <p>
         In order to submit on Gradescope, your homework will need to be in PDF format. You are highly encouraged to typeset your solutions in LaTeX, and you will find appropriate templates for each assignment below. Your graders strongly prefer LaTeX-typeset solutions, as your work is much more likely to be clear and legible, as well as consistent with the formatting they expect to see. We recognize that certain types of answers, such as those that involve graphical figures or structured formatting, can be difficult or tedious to typeset. In those cases, the template will sometimes give an example in the comments that you are encouraged to emulate, but it is fine to scan a handwritten solution to include in your latex code as a graphic.
       </p>
-      <p>
-        Labs should be submitted on Autolab.
-      </p>
 
       <p><b>Relevant Links</b>
         <ul>
@@ -66,7 +63,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>1: Prop it out</td>
+            <td>1: Logically safe</td>
             <td>2/1</td>
             <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
             <td><a href="homework/01-logicsafety-template.zip">[zip]</a></td>
