--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="list-group mx-auto">
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
-            <i>Assignment 1 is now available, due at midnight on 2/1/18.</i>
+            <i>Homework 1 is now available, due at midnight on 2/1/18.</i>
             <small class="text-muted">1/25/18</small>
           </div>          
         </div>
