--- a/assignments.html
+++ b/assignments.html
@@ -72,6 +72,29 @@
       </table></div><p><p>
       <br>
 
+      <h3>Labs</h3>
+      <br>
+
+      <div class="table-responsive">
+      <table class="table">
+        <thead class="thead-default">
+          <tr>
+            <th><i>lab</i></th>
+            <th><i>due date</i></th>
+            <th><i>handout</i></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>0: Tiny server redux</td>
+            <td>2/8</td>
+            <td><a href="labs/lab0-handout.zip">[zip]</a></td>
+          </tr>
+        </tbody>
+      </table></div><p><p>
+      <br>
+
+
     </div>
 
 
