Updated lab instructions

--- a/assignments.html
+++ b/assignments.html
@@ -73,7 +73,9 @@
       <br>
 
       <h3>Labs</h3>
-      <br>
+      <p>
+        As with homeworks, all labs are due at 11:59pm on the date marked on the handout. Labs should be submitted on Gradescope.
+      </p>
 
       <div class="table-responsive">
       <table class="table">
