--- a/assignments.html
+++ b/assignments.html
@@ -66,7 +66,7 @@
             <td>1: Logically safe</td>
             <td>2/1</td>
             <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
-            <td><a href="homework/01-logicsafety-template.zip">[zip]</a></td>
+            <td><a href="homework/01-logicsafety.zip">[zip]</a></td>
           </tr>                                   
         </tbody>
       </table></div><p><p>
