--- a/schedule.html
+++ b/schedule.html
@@ -77,7 +77,7 @@
       </tr>            
       <tr><td>1/30 </td>
         <td>Bounded model checking &amp; symbolic execution</td>
-        <td></td>
+        <td><a href="lectures/05-boundedsafety.pdf">[pdf]</a><a href="lectures/05-boundedsafety.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>2/1 </td>
