--- a/schedule.html
+++ b/schedule.html
@@ -81,12 +81,12 @@
         <td></td>
       </tr>            
       <tr><td>2/1 </td>
-        <td>Runtime safety enforcement</td>
-        <td></td>
+        <td>Memory safety &amp; software fault isolation</td>
+        <td><a href="lectures/06-sfi.pdf">[pdf]</a><a href="lectures/06-sfi.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/6 </td>
-        <td>Software fault isolation, control-flow integrity</td>
+        <td>Inline reference monitoring</td>
         <td></td>
         <td></td>
       </tr>      
