--- a/syllabus.html
+++ b/syllabus.html
@@ -147,10 +147,7 @@
 
       <h4>Late Assignments</h4>
       <p>
-        Proving correctness of real code can be difficult, even when you have correctly specified and implemented the functionality. To give you the opportunity to earn back points that you might have missed by not successfully verifying your code, you can resubmit each lab <i>once</i> within three days of the original due date. However, you will only gain points for the proof portion of the lab&mdash;you will not get points after the deadline for changes made to your implementation or specification. To earn any points after the deadline, your proof must be complete, and the verifier must accept it.
-      </p>
-      <p>
-        There are no late days for written homework. If you submit a written homework after the assigned deadline, your grade will be docked 25% for each late day.
+        You may use up to four late days on homework or labs throughout the semester. However, so that we can quickly grade your work, you can use at most two of them for any single assignment or lab. If you have already used all of your late days for the semester, your grade will be docked 25% for each day past the deadline that it is turned in. <b>You must inform the course staff on Piazza if you intend to take a late day prior to the original deadline. If you do not do so, then you will not receive the late day policy, even if you have additional late days left, and you will be docked 25% for each day past the deadline.</b>
       </p>
 
       <h4>Communication</h4>
