--- a/schedule.html
+++ b/schedule.html
@@ -81,17 +81,17 @@
         <td></td>
       </tr>            
       <tr><td>2/1 </td>
-        <td>Memory safety &amp; software fault isolation</td>
+        <td>Memory safety &amp; sandboxing</td>
         <td><a href="lectures/06-sfi.pdf">[pdf]</a><a href="lectures/06-sfi.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/6 </td>
-        <td>Inline reference monitoring</td>
-        <td></td>
+        <td>Inlining safety</td>
+        <td><a href="lectures/07-cfi.pdf">[pdf]</a><a href="lectures/07-cfi.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/8 </td>
-        <td>Typed assembly</td>
+        <td>Generalizing runtime safety: inlined reference monitors</td>
         <td></td>
         <td></td>
       </tr>      
