--- a/assignments.html
+++ b/assignments.html
@@ -42,6 +42,9 @@
         Unless otherwise stated, all homeworks are due at 11:59pm on the date marked on the handout. Also check the announcements section of the course website's index page for deadline updates, in case extensions are granted. Written homework should be submitted through Gradescope, please notify the course staff if you have not already received an email to enroll in the relevant Gradescope instance.
       </p>
       <p>
+        You are <b>strongly encouraged</b> to typeset your homework. If the course staff has trouble reading your handwriting, you will not receive points. If you choose not to typeset your solution, then <b>you must print out the provided template, write your solution in the provided space, and scan or photograph it for handin on Gradescope!</b> Handwritten homeworks will not be graded until they are on the template, and those that are handed in otherwise will be returned and subject to the late policy!
+      </p>
+      <p>
         In order to submit on Gradescope, your homework will need to be in PDF format. You are highly encouraged to typeset your solutions in LaTeX, and you will find appropriate templates for each assignment below. Your graders strongly prefer LaTeX-typeset solutions, as your work is much more likely to be clear and legible, as well as consistent with the formatting they expect to see. We recognize that certain types of answers, such as those that involve graphical figures or structured formatting, can be difficult or tedious to typeset. In those cases, the template will sometimes give an example in the comments that you are encouraged to emulate, but it is fine to scan a handwritten solution to include in your latex code as a graphic.
       </p>
 
@@ -67,7 +70,13 @@
             <td>2/1</td>
             <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
             <td><a href="homework/01-logicsafety.zip">[zip]</a></td>
-          </tr>                                   
+          </tr>       
+          <tr>
+            <td>2: Safe to the last instruction</td>
+            <td>2/15</td>
+            <td><a href="homework/02-safetypolicy.pdf">[pdf]</a></td>
+            <td><a href="homework/02-safetypolicy.zip">[zip]</a></td>
+          </tr>       
         </tbody>
       </table></div><p><p>
       <br>
