--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
       <div class="list-group mx-auto">
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
+            <i>Homework 2 is now available, due at midnight on 2/15/18.</i>
+            <small class="text-muted">2/7/18</small>
+          </div>          
+        </div>
+        <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
             <i>Lab 0 is now available, due at midnight on 2/8/18.</i>
             <small class="text-muted">1/26/18</small>
           </div>          
