--- a/schedule.html
+++ b/schedule.html
@@ -91,8 +91,8 @@
         <td></td>
       </tr>      
       <tr><td>2/8 </td>
-        <td>Generalizing runtime safety: inlined reference monitors</td>
-        <td></td>
+        <td>Control flow safety &amp; security automata</td>
+        <td><a href="lectures/08-irm.pdf">[pdf]</a><a href="lectures/08-irm.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/13 </td>
