--- a/schedule.html
+++ b/schedule.html
@@ -91,17 +91,17 @@
         <td></td>
       </tr>      
       <tr><td>2/8 </td>
-        <td>Control flow safety &amp; security automata</td>
+        <td>Control flow safety</td>
         <td><a href="lectures/08-irm.pdf">[pdf]</a><a href="lectures/08-irm.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/13 </td>
-        <td>Proof-carrying code</td>
-        <td></td>
+        <td>Security automata &amp; dynamic instrumentation</td>
+        <td><a href="lectures/09-automata.pdf">[pdf]</a><a href="lectures/09-automata.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/15 </td>
-        <td>Information flow properties</td>
+        <td>Information flow policies</td>
         <td></td>
         <td></td>
       </tr>        
