--- a/schedule.html
+++ b/schedule.html
@@ -91,7 +91,7 @@
         <td></td>
       </tr>      
       <tr><td>2/8 </td>
-        <td>Control flow safety</td>
+        <td>Lab 0 discussion, Control flow safety</td>
         <td><a href="lectures/08-irm.pdf">[pdf]</a><a href="lectures/08-irm.tex">[tex]</a></td>
         <td></td>
       </tr>      
