--- a/schedule.html
+++ b/schedule.html
@@ -102,7 +102,7 @@
       </tr>      
       <tr><td>2/15 </td>
         <td>Information flow policies</td>
-        <td></td>
+        <td><a href="lectures/10-infoflow.pdf">[pdf]</a><a href="lectures/10-infoflow.tex">[tex]</a></td>
         <td></td>
       </tr>        
       <tr><td>2/20 </td>
