--- a/assignments.html
+++ b/assignments.html
@@ -101,6 +101,11 @@
             <td>2/8</td>
             <td><a href="labs/lab0-handout.zip">[zip]</a></td>
           </tr>
+          <tr>
+            <td>1: Pinning down safety</td>
+            <td>2/8</td>
+            <td><a href="labs/lab1-handout.pdf">[pdf]</a><a href="labs/lab1-handout.zip">[zip]</a></td>
+          </tr>
         </tbody>
       </table></div><p><p>
       <br>
