--- a/schedule.html
+++ b/schedule.html
@@ -107,7 +107,7 @@
       </tr>        
       <tr><td>2/20 </td>
         <td>Information flow types I</td>
-        <td></td>
+        <td><a href="lectures/11-flowtypes1.pdf">[pdf]</a><a href="lectures/11-flowtypes1.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>2/22 </td>
