--- a/schedule.html
+++ b/schedule.html
@@ -111,13 +111,13 @@
         <td></td>
       </tr>      
       <tr><td>2/22 </td>
-        <td>Information flow types II</td>
+        <td>Pin tutorial session</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>2/27 </td>
-        <td>Declassification policies</td>
-        <td></td>
+        <td>Information flow types II</td>
+        <td><a href="lectures/12-flowtypes2.pdf">[pdf]</a><a href="lectures/12-flowtypes2.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr class="table-warning"><td>3/1 </td>
