--- a/assignments.html
+++ b/assignments.html
@@ -76,7 +76,13 @@
             <td>2/15</td>
             <td><a href="homework/02-safetypolicy.pdf">[pdf]</a></td>
             <td><a href="homework/02-safetypolicy.zip">[zip]</a></td>
-          </tr>       
+          </tr>
+          <tr>
+            <td>3: Highs and lows of information flow</td>
+            <td>3/9</td>
+            <td><a href="homework/03-infoflow.pdf">[pdf]</a></td>
+            <td><a href="homework/03-infoflow.zip">[zip]</a></td>
+          </tr> 
         </tbody>
       </table></div><p><p>
       <br>
