Added lecture 13, lab 2

--- a/assignments.html
+++ b/assignments.html
@@ -112,6 +112,11 @@
             <td>3/9</td>
             <td><a href="labs/lab1-handout.pdf">[pdf]</a><a href="labs/lab1-handout.zip">[zip]</a></td>
           </tr>
+          <tr>
+            <td>2: Better control with information flow policies</td>
+            <td>4/2, <b>Checkpoint on 3/27</b></td>
+            <td><a href="labs/lab2-handout.pdf">[pdf]</a><a href="labs/lab2-handout.zip">[zip]</a></td>
+          </tr>
         </tbody>
       </table></div><p><p>
       <br>
