--- a/schedule.html
+++ b/schedule.html
@@ -146,12 +146,12 @@
         <td></td>
       </tr>
       <tr><td>3/20 </td>
-        <td>Decentralized information flow control</td>
-        <td></td>
+        <td>Relaxing noninterference</td>
+        <td><a href="lectures/13-declass.pdf">[pdf]</a><a href="lectures/13-declass.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>3/22 </td>
-        <td>Side channel vulnerabilities</td>
+        <td>Statistical indistinguishability &amp; provable privacy</td>
         <td></td>
         <td></td>
       </tr>
