--- a/schedule.html
+++ b/schedule.html
@@ -151,8 +151,8 @@
         <td></td>
       </tr>      
       <tr><td>3/22 </td>
-        <td>Statistical indistinguishability &amp; provable privacy</td>
-        <td></td>
+        <td>Provable privacy</td>
+        <td><a href="lectures/14-statpriv.pdf">[pdf]</a><a href="lectures/14-statpriv.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>3/27 </td>
