--- a/schedule.html
+++ b/schedule.html
@@ -157,7 +157,7 @@
       </tr>
       <tr><td>3/27 </td>
         <td>Side channel security</td>
-        <td></td>
+        <td><a href="lectures/15-sidechan.pdf">[pdf]</a><a href="lectures/15-sidechan.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>3/29 </td>
