--- a/schedule.html
+++ b/schedule.html
@@ -156,13 +156,13 @@
         <td></td>
       </tr>
       <tr><td>3/27 </td>
-        <td>Side channel security</td>
+        <td>Timing side channels</td>
         <td><a href="lectures/15-sidechan.pdf">[pdf]</a><a href="lectures/15-sidechan.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>3/29 </td>
-        <td>Safety &amp information flow on the web</td>
-        <td></td>
+        <td>Memory side channels</td>
+        <td><a href="lectures/16-cachechan.pdf">[pdf]</a><a href="lectures/16-cachechan.tex">[tex]</a></td>
         <td></td>
       </tr>  
       <tr><td>4/3 </td>
