--- a/schedule.html
+++ b/schedule.html
@@ -166,27 +166,27 @@
         <td></td>
       </tr>  
       <tr><td>4/3 </td>
-        <td>Web application defenses</td>
-        <td></td>
+        <td>Web application security I</td>
+        <td><a href="lectures/17-websafety.pdf">[pdf]</a><a href="lectures/17-websafety.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>4/5 </td>
-        <td>Authorization logic</td>
+        <td>Guest lecture: Prof. Bryan Parno on end-to-end security and full-system verification</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>4/10 </td>
-        <td>PKI</td>
+        <td>Web application security II</td>
         <td></td>
         <td></td>
       </tr>      
       <tr><td>4/12 </td>
-        <td>Trusted computing I</td>
+        <td>Authorization logic</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>4/17 </td>
-        <td>Trusted computing II</td>
+        <td>Trusted computing I</td>
         <td></td>
         <td></td>
       </tr>      
@@ -196,22 +196,22 @@
         <td></td>
       </tr>
       <tr><td>4/24 </td>
-        <td>Capability policies</td>
+        <td>Trusted computing II</td>
         <td></td>
         <td></td>
       </tr>      
       <tr><td>4/26 </td>
-        <td>Provable privacy</td>
+        <td>Capability policies</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>5/1 </td>
-        <td>Reasoning about privacy compositionally</td>
+        <td>Final review</td>
         <td></td>
         <td></td>
       </tr>      
       <tr class="table-warning"><td>5/3 </td>
-        <td>Final review</td>
+        <td>Final exam</td>
         <td></td>
         <td></td>
       </tr>
