--- a/assignments.html
+++ b/assignments.html
@@ -83,6 +83,12 @@
             <td><a href="homework/03-infoflow.pdf">[pdf]</a></td>
             <td><a href="homework/03-infoflow.zip">[zip]</a></td>
           </tr> 
+          <tr>
+            <td>4: Relaxed secrecy and privacy</td>
+            <td>3/9</td>
+            <td><a href="homework/04-declass.pdf">[pdf]</a></td>
+            <td><a href="homework/04-declass.zip">[zip]</a></td>
+          </tr> 
         </tbody>
       </table></div><p><p>
       <br>
