--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
       <div class="list-group mx-auto">
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
+            <i>Homework 4 is now available, due at midnight on 4/12/18.</i>
+            <small class="text-muted">4/4/18</small>
+          </div>          
+        </div>
+        <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
             <i>Lab 2 is now available, due at midnight on 4/3/18, <b>checkpoint on 3/27/18</b>.</i>
             <small class="text-muted">3/20/18</small>
           </div>          
