--- a/schedule.html
+++ b/schedule.html
@@ -177,7 +177,7 @@
       </tr>
       <tr><td>4/10 </td>
         <td>Web application security II</td>
-        <td></td>
+        <td><a href="lectures/18-webattack.pdf">[pdf]</a><a href="lectures/18-webattack.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>4/12 </td>
