--- a/schedule.html
+++ b/schedule.html
@@ -181,12 +181,12 @@
         <td></td>
       </tr>      
       <tr><td>4/12 </td>
-        <td>Authorization logic</td>
+        <td>Penetration testing, Lab 3 tutorial</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>4/17 </td>
-        <td>Trusted computing I</td>
+        <td>Authorization logic</td>
         <td></td>
         <td></td>
       </tr>      
@@ -196,12 +196,12 @@
         <td></td>
       </tr>
       <tr><td>4/24 </td>
-        <td>Trusted computing II</td>
+        <td>Trusted computing I</td>
         <td></td>
         <td></td>
       </tr>      
       <tr><td>4/26 </td>
-        <td>Capability policies</td>
+        <td>Trusted computing II</td>
         <td></td>
         <td></td>
       </tr>
