--- a/assignments.html
+++ b/assignments.html
@@ -123,6 +123,11 @@
             <td>4/3, <b>Checkpoint on 3/27</b></td>
             <td><a href="labs/lab2-handout.pdf">[pdf]</a><a href="labs/lab2-handout.zip">[zip]</a></td>
           </tr>
+          <tr>
+            <td>3: Break it then fix it</td>
+            <td>5/4, <b>Checkpoints on 4/22 and 4/29</b></td>
+            <td><a href="labs/lab3-handout.pdf">[pdf]</a></td>
+          </tr>
         </tbody>
       </table></div><p><p>
       <br>
