Added lecture 20, HW 5

--- a/assignments.html
+++ b/assignments.html
@@ -89,6 +89,12 @@
             <td><a href="homework/04-declass.pdf">[pdf]</a></td>
             <td><a href="homework/04-declass.zip">[zip]</a></td>
           </tr> 
+          <tr>
+            <td>5: Web security and authentication logic</td>
+            <td>4/24</td>
+            <td><a href="homework/05-webauth.pdf">[pdf]</a></td>
+            <td><a href="homework/05-webauth.zip">[zip]</a></td>
+          </tr>           
         </tbody>
       </table></div><p><p>
       <br>
