--- a/schedule.html
+++ b/schedule.html
@@ -186,8 +186,8 @@
         <td></td>
       </tr>
       <tr><td>4/17 </td>
-        <td>Authorization logic</td>
-        <td></td>
+        <td>Distributed authorization</td>
+        <td><a href="lectures/20-authlogic.pdf">[pdf]</a><a href="lectures/20-authlogic.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr class="table-success">  <td>4/19 </td>
