--- a/schedule.html
+++ b/schedule.html
@@ -182,7 +182,7 @@
       </tr>      
       <tr><td>4/12 </td>
         <td>Penetration testing, Lab 3 tutorial</td>
-        <td></td>
+        <td><a href="lectures/19-pentest.pdf">[pdf]</a><a href="lectures/19-pentest.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>4/17 </td>
