--- a/schedule.html
+++ b/schedule.html
@@ -196,12 +196,12 @@
         <td></td>
       </tr>
       <tr><td>4/24 </td>
-        <td>Trusted computing I</td>
-        <td></td>
+        <td>Bootstrapping Trust</td>
+        <td><a href="lectures/21-pki.pdf">[pdf]</a><a href="lectures/21-pki.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>4/26 </td>
-        <td>Trusted computing II</td>
+        <td>Trusted Platform</td>
         <td></td>
         <td></td>
       </tr>
