--- a/schedule.html
+++ b/schedule.html
@@ -201,8 +201,8 @@
         <td></td>
       </tr>      
       <tr><td>4/26 </td>
-        <td>Trusted Platform</td>
-        <td></td>
+        <td>Trusted Computing</td>
+        <td><a href="lectures/22-tpm.pdf">[pdf]</a><a href="lectures/22-tpm.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>5/1 </td>
