Added practice problems and solutions for PKI/trust

--- a/assignments.html
+++ b/assignments.html
@@ -94,7 +94,13 @@
             <td>4/24</td>
             <td><a href="homework/05-webauth.pdf">[pdf]</a></td>
             <td><a href="homework/05-webauth.zip">[zip]</a></td>
-          </tr>           
+          </tr>
+          <tr>
+            <td>6: On Trusting Trust</td>
+            <td>(practice only)</td>
+            <td><a href="homework/06-pki.pdf">[pdf]</a></td>
+            <td><a href="homework/06-pki.zip">[zip]</a></td>
+          </tr>
         </tbody>
       </table></div><p><p>
       <br>
