--- a/schedule.html
+++ b/schedule.html
@@ -58,7 +58,7 @@
     <tbody>
       <tr>  <td>8/27 </td>
         <td>Introduction</td>
-        <td></td>
+        <td><a href="lectures/01-intro/01-intro.pdf">[pdf]</a></td>
         <td></td>
       </tr>
       <tr><td>8/29 </td>
