--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
         <li>Office Hours: TBD (answer Piazza poll!)
         <li>Email: mfredrik@cs
       </ul>
-    <p><b>TA</b>: TBD</p>
+    <p><b>TA</b>: Milijana Surbatovich</p>
       <ul>
-        <li>Office Hours: 
-        <li>Email: 
+        <li>Office Hours: TBD
       </ul>
 
     <p><b>Lectures</b>: TuTh 9:00-10:20am in HH B103</p>
