--- a/syllabus.html
+++ b/syllabus.html
@@ -51,10 +51,9 @@
           <li>Office Hours: TBD (answer Piazza poll!)
           <li>Email: mfredrik@cs
         </ul>
-      <p><b>TAs</b>: TBD</p>
+      <p><b>TAs</b>: Milijana Surbatovich</p>
         <ul>
-          <li>Office Hours: 
-          <li>Email: 
+          <li>Office Hours: TBD
         </ul>
 
       <p><b>Lectures</b>: TuTh 9:00-10:20am in HH B103.</p>
