--- a/schedule.html
+++ b/schedule.html
@@ -66,7 +66,7 @@
       </tr>
       <tr><td>8/29 </td>
         <td>Propositional logic &amp; proofs</td>
-        <td></td>
+        <td><a href="lectures/02-prop.pdf">[pdf]</a><a href="lectures/02-prop.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>9/3 </td>
