homework 1 added,  fixed T/F bug in lecture notes 2

--- a/assignments.html
+++ b/assignments.html
@@ -71,9 +71,9 @@
         <tbody>
           <tr>
             <td>1: Logically safe</td>
-            <td>9/9</td>
-            <td><i>Coming soon</i></td>
-            <td></td>
+            <td>9/10</td>
+            <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
+            <td><a href="homework/01-logicsafety.zip">[pdf]</a></td>
           </tr>       
         </tbody>
       </table></div><p><p>
