--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
     <p>
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
+            <i><a href="assignments.html">Homework 1</a> has been assigned, and is due on 9/10.</i>
+            <small class="text-muted">9/1/19</small>
+          </div>
+          <div class="d-flex w-100 justify-content-between">
             <i>Welcome! Use <a href="https://gradescope.com">Gradescope</a> entry code <b>9E62JE</b> and the <a href="https://piazza.com/cmu/fall2019/15316">Piazza signup link</a> to get started.</i>
             <small class="text-muted">8/27/19</small>
           </div>
