fixed website typo

--- a/assignments.html
+++ b/assignments.html
@@ -73,7 +73,7 @@
             <td>1: Logically safe</td>
             <td>9/10</td>
             <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
-            <td><a href="homework/01-logicsafety.zip">[pdf]</a></td>
+            <td><a href="homework/01-logicsafety.zip">[zip]</a></td>
           </tr>       
         </tbody>
       </table></div><p><p>
