--- a/schedule.html
+++ b/schedule.html
@@ -71,7 +71,7 @@
       </tr>
       <tr><td>9/3 </td>
         <td>Program semantics, safety, &amp; dynamic logic</td>
-        <td></td>
+        <td><a href="lectures/03-safety.pdf">[pdf]</a><a href="lectures/03-safety.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>9/5 </td>
