--- a/schedule.html
+++ b/schedule.html
@@ -76,7 +76,7 @@
       </tr>      
       <tr><td>9/5 </td>
         <td>Proving safety, compositionally</td>
-        <td></td>
+        <td><a href="lectures/04-safetyproofs.pdf">[pdf]</a><a href="lectures/04-safetyproofs.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>9/10 </td>
