updated webpage with office hours, cleaned up lecture 4&5 notes

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
     <p><b>Instructor</b>: Matt Fredrikson</p>
       <ul>
-        <li>Office Hours: TBD (answer Piazza poll!)
+        <li>Office Hours: Thursdays 4-5pm, CIC 2126
         <li>Email: mfredrik@cs
       </ul>
     <p><b>TA</b>: Milijana Surbatovich</p>
       <ul>
-        <li>Office Hours: TBD
+        <li>Office Hours: Fridays 2pm, CIC 2nd floor
       </ul>
 
     <p><b>Lectures</b>: TuTh 9:00-10:20am in HH B103</p>
