--- a/schedule.html
+++ b/schedule.html
@@ -80,17 +80,17 @@
         <td></td>
       </tr>            
       <tr><td>9/10 </td>
-        <td>Bounded model checking &amp; symbolic execution</td>
-        <td></td>
+        <td>Safety proofs, continued</td>
+        <td><a href="lectures/04-safetyproofs.pdf">[pdf]</a><a href="lectures/04-safetyproofs.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>9/12 </td>
-        <td>Memory safety &amp; sandboxing</td>
+        <td>Automated safety checkers, memory safety</td>
         <td></td>
         <td></td>
       </tr>      
       <tr><td>9/17 </td>
-        <td>Inlining safety</td>
+        <td>Sandboxing &amp; inlining safety</td>
         <td></td>
         <td></td>
       </tr>
@@ -109,43 +109,48 @@
         <td></td>
         <td></td>
       </tr>
-      <tr class="table-warning"><td>10/1 </td>
-        <td>Midterm review</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr class="table-danger">  <td>10/3 </td>
+      <tr class="table-danger"><td>10/1 </td>
         <td>Midterm exam</td>
         <td></td>
         <td></td>
       </tr>
-      <tr><td>10/8 </td>
+      <tr class="table-warning">  <td>10/3 </td>
+        <td>Midterm exam</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr><td>10/3 </td>
         <td>Information flow policies</td>
         <td></td>
         <td></td>
       </tr>        
-      <tr><td>10/10 </td>
+      <tr><td>10/8 </td>
         <td>Information flow types I</td>
         <td></td>
         <td></td>
       </tr>
-      <tr><td>10/15 </td>
+      <tr><td>10/10 </td>
         <td>Information flow types II</td>
         <td></td>
         <td></td>
       </tr>
-      <tr><td>10/17 </td>
+      <tr><td>10/15 </td>
         <td>Guest lecture: TBD</td>
         <td></td>
         <td></td>
       </tr>
-      <tr><td>10/22 </td>
+      <tr><td>10/17 </td>
         <td>Relaxing noninterference</td>
         <td></td>
         <td></td>
       </tr>      
+      <tr><td>10/22 </td>
+        <td>Provable privacy I</td>
+        <td></td>
+        <td></td>
+      </tr>
       <tr><td>10/24 </td>
-        <td>Provable privacy</td>
+        <td>Provable privacy II</td>
         <td></td>
         <td></td>
       </tr>
