--- a/schedule.html
+++ b/schedule.html
@@ -86,7 +86,7 @@
       </tr>            
       <tr><td>9/12 </td>
         <td>Automated safety checkers, memory safety</td>
-        <td></td>
+        <td><a href="lectures/06-automemory.pdf">[pdf]</a><a href="lectures/06-automemory.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>9/17 </td>
