--- a/schedule.html
+++ b/schedule.html
@@ -85,27 +85,27 @@
         <td></td>
       </tr>            
       <tr><td>9/12 </td>
-        <td>Automated safety checkers, memory safety</td>
+        <td>Automated safety checkers, proof practice</td>
         <td><a href="lectures/06-automemory.pdf">[pdf]</a><a href="lectures/06-automemory.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>9/17 </td>
-        <td>Sandboxing &amp; inlining safety</td>
-        <td></td>
+        <td>Memory Safety &amp; Sandboxing</td>
+        <td><a href="lectures/07-memsandbox.pdf">[pdf]</a><a href="lectures/07-memsandbox.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>9/19 </td>
-        <td>Pin tutorial session</td>
+        <td>Inlining safety</td>
         <td></td>
         <td></td>
-      </tr>      
+      </tr>
       <tr><td>9/24 </td>
         <td>Control flow safety</td>
         <td></td>
         <td></td>
       </tr>   
       <tr><td>9/26 </td>
-        <td>Security automata &amp; dynamic instrumentation</td>
+        <td>Security automata, dynamic instrumentation, &amp; PIN tutorial</td>
         <td></td>
         <td></td>
       </tr>
