--- a/schedule.html
+++ b/schedule.html
@@ -95,8 +95,8 @@
         <td></td>
       </tr>
       <tr><td>9/19 </td>
-        <td>Inlining safety</td>
-        <td></td>
+        <td>Software fault isolation</td>
+        <td><a href="lectures/08-sfi.pdf">[pdf]</a><a href="lectures/08-sfi.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>9/24 </td>
