added homework 2, removed spurious midterm date

--- a/assignments.html
+++ b/assignments.html
@@ -75,6 +75,12 @@
             <td><a href="homework/01-logicsafety.pdf">[pdf]</a></td>
             <td><a href="homework/01-logicsafety.zip">[zip]</a></td>
           </tr>       
+          <tr>
+            <td>2: Safe in the sandbox</td>
+            <td>9/29</td>
+            <td><a href="homework/02-safetypolicy.pdf">[pdf]</a></td>
+            <td><a href="homework/02-safetypolicy.zip">[zip]</a></td>
+          </tr>       
         </tbody>
       </table></div><p><p>
       <br>
