updated lecture schedule

--- a/schedule.html
+++ b/schedule.html
@@ -101,12 +101,12 @@
       </tr>
       <tr><td>9/24 </td>
         <td>Control flow safety</td>
-        <td></td>
+        <td><a href="lectures/09-cfi.pdf">[pdf]</a><a href="lectures/09-cfi.tex">[tex]</a></td>
         <td></td>
       </tr>   
       <tr><td>9/26 </td>
         <td>Security automata, dynamic instrumentation, &amp; PIN tutorial</td>
-        <td></td>
+        <td><a href="lectures/10-automata.pdf">[pdf]</a><a href="lectures/10-automata.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr class="table-danger"><td>10/1 </td>
