--- a/schedule.html
+++ b/schedule.html
@@ -105,7 +105,7 @@
         <td></td>
       </tr>   
       <tr><td>9/26 </td>
-        <td>Security automata, dynamic instrumentation, &amp; PIN tutorial</td>
+        <td>Security automata &amp; dynamic instrumentation</td>
         <td><a href="lectures/10-automata.pdf">[pdf]</a><a href="lectures/10-automata.tex">[tex]</a></td>
         <td></td>
       </tr>
