--- a/schedule.html
+++ b/schedule.html
@@ -116,7 +116,7 @@
       </tr>
       <tr><td>10/3 </td>
         <td>Information flow policies</td>
-        <td></td>
+        <td><a href="lectures/11-flow.pdf">[pdf]</a><a href="lectures/11-flow.tex">[tex]</a></td>
         <td></td>
       </tr>        
       <tr><td>10/8 </td>
