--- a/assignments.html
+++ b/assignments.html
@@ -100,6 +100,11 @@
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td>1: Pinning down safety</td>
+            <td>10/25 (final), <b>Checkpoint on 10/14</b></td>
+            <td><a href="labs/lab1-handout.pdf">[pdf]</a><a href="labs/lab1-handout.zip">[zip]</a></td>
+          </tr>
         </tbody>
       </table></div><p><p>
       <br>
