--- a/schedule.html
+++ b/schedule.html
@@ -121,7 +121,7 @@
       </tr>        
       <tr><td>10/8 </td>
         <td>Information flow types I</td>
-        <td></td>
+        <td><a href="lectures/12-flowtypes1.pdf">[pdf]</a><a href="lectures/12-flowtypes1.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>10/10 </td>
