--- a/schedule.html
+++ b/schedule.html
@@ -126,7 +126,7 @@
       </tr>
       <tr><td>10/10 </td>
         <td>Information flow types II</td>
-        <td></td>
+        <td><a href="lectures/13-flowtypes2.pdf">[pdf]</a><a href="lectures/13-flowtypes2.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>10/15 </td>
