--- a/schedule.html
+++ b/schedule.html
@@ -131,7 +131,7 @@
       </tr>
       <tr><td>10/15 </td>
         <td>Relaxing noninterference</td>
-        <td></td>
+        <td><a href="lectures/14-declass.pdf">[pdf]</a><a href="lectures/14-declass.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>10/17 </td>
