added lectures 15 and 16

--- a/schedule.html
+++ b/schedule.html
@@ -135,13 +135,13 @@
         <td></td>
       </tr>
       <tr><td>10/17 </td>
-        <td>Guest lecture: TBD</td>
-        <td></td>
+        <td>Guest lecture: Arthur Azevedo de Amorim, Dynamic Information Flow Control</td>
+        <td><a href="lectures/15-dynamicflow.pdf">[slides]</a></td>
         <td></td>
       </tr>
       <tr><td>10/22 </td>
         <td>Provable privacy I</td>
-        <td></td>
+        <td><a href="lectures/16-privacy.pdf">[pdf]</a><a href="lectures/16-privacy.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>10/24 </td>
