--- a/assignments.html
+++ b/assignments.html
@@ -81,6 +81,12 @@
             <td><a href="homework/02-safetypolicy.pdf">[pdf]</a></td>
             <td><a href="homework/02-safetypolicy.zip">[zip]</a></td>
           </tr>       
+          <tr>
+            <td>3: Information Flow</td>
+            <td>10/30</td>
+            <td><a href="homework/03-infoflow.pdf">[pdf]</a></td>
+            <td><a href="homework/03-infoflow.zip">[zip]</a></td>
+          </tr>       
         </tbody>
       </table></div><p><p>
       <br>
