--- a/schedule.html
+++ b/schedule.html
@@ -146,7 +146,7 @@
       </tr>
       <tr><td>10/24 </td>
         <td>Provable privacy II</td>
-        <td></td>
+        <td><a href="lectures/16-privacy.pdf">[pdf]</a><a href="lectures/16-privacy.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>10/29 </td>
