--- a/schedule.html
+++ b/schedule.html
@@ -151,7 +151,7 @@
       </tr>
       <tr><td>10/29 </td>
         <td>Timing side channels</td>
-        <td></td>
+        <td><a href="lectures/18-sidechan.pdf">[pdf]</a><a href="lectures/18-sidechan.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>10/31 </td>
