--- a/schedule.html
+++ b/schedule.html
@@ -156,7 +156,7 @@
       </tr>      
       <tr><td>10/31 </td>
         <td>Memory side channels</td>
-        <td></td>
+        <td><a href="lectures/19-cachechan.pdf">[pdf]</a><a href="lectures/19-cachechan.tex">[tex]</a></td>
         <td></td>
       </tr>  
       <tr><td>11/5 </td>
