--- a/assignments.html
+++ b/assignments.html
@@ -82,10 +82,16 @@
             <td><a href="homework/02-safetypolicy.zip">[zip]</a></td>
           </tr>       
           <tr>
-            <td>3: Information Flow</td>
+            <td>3: Information flow</td>
             <td>10/30</td>
             <td><a href="homework/03-infoflow.pdf">[pdf]</a></td>
             <td><a href="homework/03-infoflow.zip">[zip]</a></td>
+          </tr>       
+          <tr>
+            <td>4: Relaxed secrecy and privacy</td>
+            <td>11/10</td>
+            <td><a href="homework/04-declass.pdf">[pdf]</a></td>
+            <td><a href="homework/03-declass.zip">[zip]</a></td>
           </tr>       
         </tbody>
       </table></div><p><p>
