--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     <h3>Announcements</h3>
     <p>
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
+        <div class="d-flex w-100 justify-content-between">
+            <i><a href="assignments.html">Homework 4</a> has been assigned, and is due on 11/10.</i>
+            <small class="text-muted">11/3/19</small>
+          </div>
           <div class="d-flex w-100 justify-content-between">
             <i><a href="assignments.html">Homework 3</a> has been assigned, and is due on 10/30.</i>
             <small class="text-muted">10/23/19</small>
