--- a/schedule.html
+++ b/schedule.html
@@ -160,8 +160,8 @@
         <td></td>
       </tr>  
       <tr><td>11/5 </td>
-        <td>Web application security I</td>
-        <td></td>
+        <td>Web security: application model &amp; same-origin policy</td>
+        <td><a href="lectures/20-websafety1.pdf">[pdf]</a><a href="lectures/20-websafety1.tex">[tex]</a></td>
         <td></td>
       </tr>            
       <tr><td>11/7 </td>
