--- a/schedule.html
+++ b/schedule.html
@@ -165,8 +165,8 @@
         <td></td>
       </tr>            
       <tr><td>11/7 </td>
-        <td>Web application security II</td>
-        <td></td>
+        <td>Web security: attacks &amp; defenses</td>
+        <td><a href="lectures/21-websafety2.pdf">[pdf]</a><a href="lectures/21-websafety2.tex">[tex]</a></td>
         <td></td>
       </tr>      
       <tr><td>11/12 </td>
