--- a/assignments.html
+++ b/assignments.html
@@ -115,7 +115,12 @@
           <tr>
             <td>1: Pinning down safety</td>
             <td>10/25 (final), <b>Checkpoint on 10/14</b></td>
-            <td><a href="labs/lab1-handout.pdf">[pdf]</a><a href="labs/lab1-handout.zip">[zip]</a></td>
+            <td><a href="labs/lab1-handout.zip">[zip]</a></td>
+          </tr>
+          <tr>
+            <td>2: Better control</td>
+            <td>11/23</td>
+            <td><a href="labs/lab2-handout.zip">[zip]</a></td>
           </tr>
         </tbody>
       </table></div><p><p>
