--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
     <h3>Announcements</h3>
     <p>
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
-        <div class="d-flex w-100 justify-content-between">
+          <div class="d-flex w-100 justify-content-between">
+            <i><a href="assignments.html">Lab 2</a> has been assigned, and is due on 11/23.</i>
+            <small class="text-muted">11/8/19</small>
+          </div>
+          <div class="d-flex w-100 justify-content-between">
             <i><a href="assignments.html">Homework 4</a> has been assigned, and is due on 11/10.</i>
             <small class="text-muted">11/3/19</small>
           </div>
