--- a/schedule.html
+++ b/schedule.html
@@ -170,8 +170,8 @@
         <td></td>
       </tr>      
       <tr><td>11/12 </td>
-        <td>Penetration testing, Lab 3 tutorial</td>
-        <td></td>
+        <td>Authorization, logically</td>
+        <td><a href="lectures/22-authlogic.pdf">[pdf]</a><a href="lectures/22-authlogic.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>11/14 </td>
