--- a/assignments.html
+++ b/assignments.html
@@ -91,7 +91,13 @@
             <td>4: Relaxed secrecy and privacy</td>
             <td>11/10</td>
             <td><a href="homework/04-declass.pdf">[pdf]</a></td>
-            <td><a href="homework/03-declass.zip">[zip]</a></td>
+            <td><a href="homework/04-declass.zip">[zip]</a></td>
+          </tr>       
+          <tr>
+            <td>5: Relaxed secrecy and privacy</td>
+            <td>11/20</td>
+            <td><a href="homework/05-webauth.pdf">[pdf]</a></td>
+            <td><a href="homework/05-webauth.zip">[zip]</a></td>
           </tr>       
         </tbody>
       </table></div><p><p>
