added lecture 23, fixed typos

--- a/assignments.html
+++ b/assignments.html
@@ -94,7 +94,7 @@
             <td><a href="homework/04-declass.zip">[zip]</a></td>
           </tr>       
           <tr>
-            <td>5: Relaxed secrecy and privacy</td>
+            <td>5: Web security and authorization</td>
             <td>11/20</td>
             <td><a href="homework/05-webauth.pdf">[pdf]</a></td>
             <td><a href="homework/05-webauth.zip">[zip]</a></td>
