--- a/schedule.html
+++ b/schedule.html
@@ -175,17 +175,17 @@
         <td></td>
       </tr>
       <tr><td>11/14 </td>
-        <td>Distributed authorization</td>
-        <td></td>
+        <td>Bootstrapping Trust</td>
+        <td><a href="lectures/23-pki.pdf">[pdf]</a><a href="lectures/23-pki.tex">[tex]</a></td>
         <td></td>
       </tr>
       <tr><td>11/19 </td>
-        <td>Bootstrapping Trust</td>
+        <td>Trusted Computing</td>
         <td></td>
         <td></td>
       </tr>
       <tr><td>11/21 </td>
-        <td>Trusted Computing</td>
+        <td>Lab 3 Tutorial</td>
         <td></td>
         <td></td>
       </tr>      
