--- a/schedule.html
+++ b/schedule.html
@@ -180,13 +180,13 @@
         <td></td>
       </tr>
       <tr><td>11/19 </td>
-        <td>Trusted Computing</td>
-        <td></td>
+        <td>Trusted computing</td>
+        <td><a href="lectures/24-tc.pdf">[pdf]</a><a href="lectures/24-tc.tex">[tex]</a>
         <td></td>
       </tr>
       <tr><td>11/21 </td>
-        <td>Lab 3 Tutorial</td>
-        <td></td>
+        <td>Trusted computing, continued</a>
+        <td><a href="lectures/24-tc.pdf">[pdf]</a><a href="lectures/24-tc.tex">[tex]</a>
         <td></td>
       </tr>      
       <tr class="table-success">  <td>11/26 </td>
