--- a/assignments.html
+++ b/assignments.html
@@ -125,8 +125,13 @@
           </tr>
           <tr>
             <td>2: Better control</td>
-            <td>11/23</td>
+            <td>11/24</td>
             <td><a href="labs/lab2-handout.zip">[zip]</a></td>
+          </tr>
+          <tr>
+            <td>2: Break it</td>
+            <td>12/6</td>
+            <td><a href="labs/lab3-handout.pdf">[pdf]</a></td>
           </tr>
         </tbody>
       </table></div><p><p>
