--- a/index.html
+++ b/index.html
@@ -88,11 +88,15 @@
     <p>
         <div class="list-group-item border-left-0 border-right-0 flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
+            <i><a href="assignments.html">Lab 3</a> has been assigned, and is due on 12/6.</i>
+            <small class="text-muted">11/8/19</small>
+          </div>
+          <div class="d-flex w-100 justify-content-between">
             <i><a href="assignments.html">Homework 5</a> has been assigned, and is due on 11/20.</i>
             <small class="text-muted">11/12/19</small>
           </div>
           <div class="d-flex w-100 justify-content-between">
-            <i><a href="assignments.html">Lab 2</a> has been assigned, and is due on 11/23.</i>
+            <i><a href="assignments.html">Lab 2</a> has been assigned, and is due on 11/24.</i>
             <small class="text-muted">11/8/19</small>
           </div>
           <div class="d-flex w-100 justify-content-between">
